Fix z-index issues

--- a/src/scss/Partials/_platform.scss
+++ b/src/scss/Partials/_platform.scss
@@ -36,7 +36,6 @@
     #app-content {
         overflow-y: initial;
         overflow-x: initial;
-        z-index:    2000;
 
         @media all and (max-width : 1366px) {
             &.show-details .app-content-right {
